--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,19 @@
 
   <groupId>by.tc.task01</groupId>
   <artifactId>jwd-task01-template</artifactId>
-  <version>0.0.1</version>
+  <version>2.50.1-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>15</source>
+          <target>15</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>jwd-task01-template</name>
